--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-	"name": "sveltee",
+	"name": "2025-hackaton",
+	"private": true,
 	"version": "0.0.1",
-	"scripts": {
-		"dev": "dotenv -e .env vite dev",
-		"build": "dotenv -e .env vite build",
-		"preview": "dotenv -e .env vite preview",
-		"prepare": "svelte-kit sync || echo ''",
-		"db:generate": "drizzle-kit generate",
-		"db:studio": "drizzle-kit studio",
-		"db:push": "dotenv -e .env drizzle-kit push",
-		"db:migrate": "dotenv -e .env drizzle-kit migrate"
-	},
 	"type": "module",
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"prepare": "svelte-kit sync || echo ''",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"format": "prettier --write .",
+		"lint": "prettier --check ."
+	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^7.0.0",
 		"@sveltejs/kit": "^2.48.5",
@@ -19,13 +20,12 @@
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.19",
 		"@tailwindcss/vite": "^4.1.17",
-		"@types/node": "^22",
-		"autoprefixer": "^10.4.22",
-		"dotenv-cli": "^11.0.0",
-		"drizzle-kit": "^0.31.7",
-		"drizzle-orm": "^0.44.7",
-		"postcss": "^8.5.6",
+		"@types/node": "^24.10.1",
+		"prettier": "^3.6.2",
+		"prettier-plugin-svelte": "^3.4.0",
+		"prettier-plugin-tailwindcss": "^0.7.1",
 		"svelte": "^5.43.8",
+		"svelte-check": "^4.3.4",
 		"tailwindcss": "^4.1.17",
 		"typescript": "^5.9.3",
 		"vite": "^7.2.2"
@@ -33,8 +33,6 @@
 	"dependencies": {
 		"dotenv": "^17.2.3",
 		"groq-sdk": "^0.37.0",
-		"marked": "^17.0.1",
-		"mysql2": "^3.15.3",
-		"openai": "^6.10.0"
+		"marked": "^17.0.1"
 	}
 }
